--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@ image: assets/images/blog/press-cover.jpg
 <!-- Home Intro
 ================================================== -->
 {% if page.url == "/" %}
+
+<div class="p-5 mb-4 bg-light rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
+        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+        <button class="btn btn-primary btn-lg" type="button">Example button</button>
+      </div>
+    </div>
+
+
+
 <div class="rounded mb-5 hero">
   <div class="align-items-center justify-content-between" style="text-align:center;">
 
