--- a/index.html
+++ b/index.html
@@ -11,27 +11,11 @@ image: assets/images/blog/press-cover.jpg
 
 <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-        <button class="btn btn-primary btn-lg" type="button">Example button</button>
+        <h1 class="display-5 fw-bold">Automation, Efficiency & Security Begin With Us</h1>
+        <p class="col-md-8 fs-4">Your Innovative Information System Solution Provider</p>
+        <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Find out more...</a>
       </div>
     </div>
-
-
-
-<div class="rounded mb-5 hero">
-  <div class="align-items-center justify-content-between" style="text-align:center;">
-
-      <h1 style="color:#ffff;" class="font-weight-bold mb-4 serif-font">
-        Automation, Efficiency & Security Begin With Us</h1>
-      <div class="row">
-        <div class="col-lg-10 mx-auto">
-          <p style="color:#ffff;" class="lead mb-4">Your Innovative Information System Solution Provider</p>
-          <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Find out more...</a>
-        </div>
-      </div>
-  </div>
-</div>
 {% endif %}
 
 <!-- Notice
