--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ image: assets/images/blog/press-cover.jpg
 
 <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Automation, Efficiency & Security Begin With Us</h1>
+        <h1 class="display-5 fw-bold">Automation, Efficiency & <br>Security Begin With Us</h1>
         <p class="col-md-8 fs-4">Your Innovative Information System Solution Provider</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Find out more...</a>
       </div>
