--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ image: assets/images/blog/press-cover.jpg
         </p>
 
         <div class="d-flex flex-column flex-md-row">
-          <a href="/docs/5.1/getting-started/introduction/" class="btn btn-lg btn-bd-primary mb-3 me-md-3" onclick="ga('send', 'event', 'Jumbotron actions', 'Get started', 'Get started');">Get started</a>
-          <a href="/docs/5.1/getting-started/download/" class="btn btn-lg btn-outline-secondary mb-3" onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 5.1.0');">Download</a>
+          <a href="/docs/5.1/getting-started/introduction/" class="btn btn-lg btn-bd-primary mb-3 me-md-3" onclick="ga('send', 'event', 'Jumbotron actions', 'Get started', 'Get started');">Find out more</a>
+          <a href="/docs/5.1/getting-started/download/" class="btn btn-lg btn-outline-secondary mb-3" onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 5.1.0');">About us</a>
         </div>
         <p class="text-muted mb-0">
           Currently <strong>v5.1.0</strong>
