--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ image: assets/images/blog/press-cover.jpg
       <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
         <h1 class="mb-3">Automation, Efficiency & Security Begin With Us</h1>
         <p class="lead mb-4">
-          Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.
+          Technical support is essential for any individual or organization to carry out day-to-day work easily and quickly. So our duty as US LAYER is to support the people of Sri Lanka with new technologies.
         </p>
 
         <div class="d-flex flex-column flex-md-row">
