--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ image: assets/images/blog/press-cover.jpg
       <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
         <h1 class="mb-3">Automation, Efficiency & Security Begin With Us</h1>
         <p class="lead mb-4">
-          Technical support is essential for any individual or organization to carry out day-to-day work easily and quickly. So our duty as US LAYER is to support the people of Sri Lanka with new technologies.
+          Technical support is essential for any individual or organization to carry out day-to-day work easily and quickly. So our duty as US LAYER is to support the people of Sri Lanka with new technologies. Our sole objective is to provide the most accurate technical service to our customers.
         </p>
 
         <div class="d-flex flex-column flex-md-row">
