--- a/index.html
+++ b/index.html
@@ -21,16 +21,10 @@ image: assets/images/blog/press-cover.jpg
         </p>
 
         <div class="d-flex flex-column flex-md-row">
-          <a href="#" class="btn btn-lg btn-bd-primary mb-3 me-md-3">Find out more</a>
+          <a href="#" class="btn btn-lg btn-bd-primary mb-3 me-md-3">Our services</a>
           <a href="/about" class="btn btn-lg btn-outline-secondary mb-3">About us</a>
         </div>
-        <p class="text-muted mb-0">
-          Currently <strong>v5.1.0</strong>
-          <span class="px-1">·</span>
-          <a href="https://getbootstrap.com/docs/4.6/getting-started/introduction/" class="link-secondary">v4.6.x docs</a>
-          <span class="px-1">·</span>
-          <a href="/docs/versions/" class="link-secondary">All releases</a>
-        </p>
+
       </div>
     </div>
 
