--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ image: assets/images/blog/press-cover.jpg
 ================================================== -->
 
 <div class="px-4 pt-5 my-5 text-center border-bottom">
-  <h1><i class="bi bi-shop"></i></h1>
+  <div style="font-size: 4.5rem;"><i class="bi bi-shop"></i></div>
     <h2 class="display-4 fw-bold">Get your business online today</h2>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
