--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ image: assets/images/blog/press-cover.jpg
 
 <div class="px-4 pt-5 my-5 text-center border-bottom">
   <div style="font-size: 4.5rem;"><i class="bi bi-shop text-success"></i></div>
-    <h2 class="display-4 fw-bold">Get your business online today</h2>
+    <h2 class="display-4 fw-bold" style="font-size: 2.5rem;">Get your business online today</h2>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
