--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ image: assets/images/blog/press-cover.jpg
     </div>
     <div class="overflow-hidden" style="max-height: 30vh;">
       <div class="container px-5">
-        <img src="https://getbootstrap.com/docs/5.1/examples/heroes/bootstrap-docs.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+        <img src="/assets/web-hosting-screenshot.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="web hosting screenshot" width="700" height="500" loading="lazy">
       </div>
     </div>
   </div>
