--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ image: assets/images/blog/press-cover.jpg
 
 {% endif %}
 
-
-<div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+<div class="container">
+  <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4 fw-bold lh-1">Border hero with cropped image and shadows</h1>
         <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
@@ -48,6 +48,7 @@ image: assets/images/blog/press-cover.jpg
           <img class="rounded-lg-3" src="https://getbootstrap.com/docs/5.1/examples/heroes/bootstrap-docs.png" alt="" width="720">
       </div>
     </div>
+  </div>
 
 
 
