--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@ image: assets/images/blog/press-cover.jpg
             CCTV and Alarm Systems
           </div>
         <h2 class="display-4 fw-bold lh-1" style="font-size: 2.5rem;">Home & Business Security</h2>
-        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <p class="lead">We have years of experience in the field and have a dedicated team. After we have thoroughly checked the location where we want to install the CCTV or security alarm system, we will install the system with the appropriate devices in place.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+          <a href="#" class="btn btn-lg btn-outline-secondary mb-3">Find out more...</a>
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
@@ -61,7 +60,6 @@ image: assets/images/blog/press-cover.jpg
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
         <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
       </div>
     </div>
