--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ image: assets/images/blog/press-cover.jpg
 
 
 
-<div class="px-4 pt-5 my-5 text-center border-bottom">
+<div class="px-4 pt-5 my-5b text-center border-bottom">
   <div style="font-size: 4.5rem;"><i class="bi bi-shop text-success"></i></div>
     <h2 class="display-4 fw-bold" style="font-size: 2.5rem;">Get your business online today</h2>
     <div class="col-lg-6 mx-auto">
