--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ image: assets/images/blog/press-cover.jpg
   <div class="container px-4 px-md-3">
     <div class="row align-items-lg-center">
       <div class="col-8 mx-auto col-md-4 order-md-2 col-lg-5">
-        <<img src="/assets/images/header.svg" alt="Sri Lankan IT Company">
+        <img src="/assets/images/header.svg" alt="Sri Lankan IT Company">
       </div>
       <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
         <h1 class="mb-3">Automation, Efficiency & Security Begin With Us</h1>
