--- a/index.html
+++ b/index.html
@@ -59,24 +59,12 @@ image: assets/images/blog/press-cover.jpg
           <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
-          <form class="p-4 p-md-5 border rounded-3 bg-light">
-            <div class="form-floating mb-3">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" autocomplete="off">
-              <label for="floatingInput">Email address</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-              <label for="floatingPassword">Password</label>
-            </div>
-            <div class="checkbox mb-3">
-              <label>
-                <input type="checkbox" value="remember-me"> Remember me
-              </label>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+          <div class="p-4 p-md-5 border rounded-3 bg-light">
+            
             <hr class="my-4">
             <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
-          </form>
+          </dv>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
         </div>
       </div>
     </div>
