--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@ image: assets/images/blog/press-cover.jpg
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
           <div class="p-4 p-md-5 border rounded-3 bg-light">
-            
+
+            <button class="w-100 btn btn-lg btn-primary" type="submit"><i class="bi bi-google"></i> Review us on Google</button>
+
             <hr class="my-4">
             <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
           </dv>
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+
         </div>
       </div>
     </div>
