--- a/index.html
+++ b/index.html
@@ -61,7 +61,24 @@ image: assets/images/blog/press-cover.jpg
         <div class="col-md-10 mx-auto col-lg-5">
           <div class="p-4 p-md-5 border rounded-3 bg-light">
 
-            <button class="w-100 btn btn-lg btn-primary" type="submit"><i class="bi bi-google"></i> Review us on Google</button>
+            <a href="" target="_blank">
+              <button class="w-100 btn btn-lg btn-success" type="submit">
+                <i class="bi bi-google"></i> Review us on Google
+              </button>
+            </a>
+
+            <a href="" target="_blank">
+              <button class="w-100 btn btn-lg btn-primary" type="submit">
+                <i class="bi bi-google"></i> Recomend us on Google
+              </button>
+            </a>
+
+            <a href="" target="_blank">
+              <button class="w-100 btn btn-lg btn-warning" type="submit">
+                <i class="bi bi-google"></i> Leave a comment
+              </button>
+            </a>
+
 
             <hr class="my-4">
             <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
