--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ image: assets/images/blog/press-cover.jpg
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-primary" type="submit">
-                <i class="bi bi-google"></i> Recomend us on Google
+                <i class="bi bi-facebook"></i> Recomend us on Facebook
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-warning" type="submit">
-                <i class="bi bi-google"></i> Leave a comment
+                <i class="bi bi-chat-left-quote"></i> Leave a comment
               </button>
             </a>
 
