--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@ image: assets/images/blog/press-cover.jpg
           <div class="p-4 p-md-5 border rounded-3 bg-light">
 
             <a href="" target="_blank">
-              <button class="w-100 btn btn-lg btn-success" type="submit">
+              <button class="w-100 btn btn-lg btn-success text-left" type="submit">
                 <i class="bi bi-google"></i> Review us on Google
               </button>
             </a>
 
             <a href="" target="_blank">
-              <button class="w-100 btn btn-lg btn-primary" type="submit">
+              <button class="w-100 btn btn-lg btn-primary text-left" type="submit">
                 <i class="bi bi-facebook"></i> Recomend us on Facebook
               </button>
             </a>
 
             <a href="" target="_blank">
-              <button class="w-100 btn btn-lg btn-warning" type="submit">
+              <button class="w-100 btn btn-lg btn-warning text-left" type="submit">
                 <i class="bi bi-chat-left-quote"></i> Leave a comment
               </button>
             </a>
