--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@ image: assets/images/blog/press-cover.jpg
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-success review_btn" type="submit">
-                <div><i class="bi bi-google"></i> | Review us on Google</div>
+                <i class="bi bi-google"></i> Review us on Google
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-primary review_btn" type="submit">
-                <div><i class="bi bi-facebook"></i> | Recomend us on Facebook</div>
+                <i class="bi bi-facebook"></i> Recomend us on Facebook
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-warning review_btn" type="submit">
-                <div><i class="bi bi-chat-left-quote"></i> | Leave a comment</div> 
+                <i class="bi bi-chat-left-quote"></i> Leave a comment
               </button>
             </a>
 
