--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@ image: assets/images/blog/press-cover.jpg
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-success review_btn" type="submit">
-                <i class="bi bi-google"></i> Review us on Google
+                <i class="bi bi-google"></i> <div class="bt-txt">Review us on Google</div>
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-primary review_btn" type="submit">
-                <i class="bi bi-facebook"></i> Recomend us on Facebook
+                <i class="bi bi-facebook"></i> <div class="bt-txt">Recomend us on Facebook</div>
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-warning review_btn" type="submit">
-                <i class="bi bi-chat-left-quote"></i> Leave a comment
+                <i class="bi bi-chat-left-quote"></i> <div class="bt-txt">Leave a comment</div>
               </button>
             </a>
 
