--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ image: assets/images/blog/press-cover.jpg
         <div class="col-lg-7 text-center text-lg-start">
           <h1 class="display-4 fw-bold lh-1 mb-3">Did you see our uniqueness than others?</h1>
           <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+          <hr class="my-4">
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
           <div class="p-4 p-md-5 border rounded-3 bg-light">
@@ -80,9 +81,9 @@ image: assets/images/blog/press-cover.jpg
             </a>
 
 
-            <hr class="my-4">
+
             <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
-          </dv>
+          </div>
 
         </div>
       </div>
