--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@ image: assets/images/blog/press-cover.jpg
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-success review_btn" type="submit">
-                <i class="bi bi-google"></i> Review us on Google
+                <i class="bi bi-google">Review us on Google</i>
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-primary review_btn" type="submit">
-                <i class="bi bi-facebook"></i> Recomend us on Facebook
+                <i class="bi bi-facebook">Recomend us on Facebook</i>
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-warning review_btn" type="submit">
-                <i class="bi bi-chat-left-quote"></i> Leave a comment
+                <i class="bi bi-chat-left-quote">Leave a comment</i> 
               </button>
             </a>
 
