--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@ image: assets/images/blog/press-cover.jpg
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-success review_btn" type="submit">
-                <i class="bi bi-google">Review us on Google</i>
+                <i class="bi bi-google"><small>Review us on Google</small></i>
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-primary review_btn" type="submit">
-                <i class="bi bi-facebook">Recomend us on Facebook</i>
+                <i class="bi bi-facebook"><small>Recomend us on Facebook</small></i>
               </button>
             </a>
 
             <a href="" target="_blank">
               <button class="w-100 btn btn-lg btn-warning review_btn" type="submit">
-                <i class="bi bi-chat-left-quote">Leave a comment</i> 
+                <i class="bi bi-chat-left-quote"><small>Leave a comment</small></i>
               </button>
             </a>
 
