--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ image: assets/images/blog/press-cover.jpg
 
 
 
-            <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+            <small class="text-muted">❤️ We welcome your reviews.</small>
           </div>
 
         </div>
