--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@ image: assets/images/blog/press-cover.jpg
                 <i class="bi bi-chat-left-quote"></i>Leave a comment
               </button>
             </a>
-
-
-
-            <small class="text-muted">❤️ We welcome your reviews.</small>
+            ❤️ <small class="text-muted">We welcome your reviews.</small>
           </div>
 
         </div>
