--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ image: assets/images/blog/press-cover.jpg
       <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
           <h1 class="display-4 fw-bold lh-1 mb-3">Did you see our uniqueness than others?</h1>
-          <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+          <p class="col-lg-10 fs-4">With our focus on the world’s ever-renewing technology, we are quick to provide maximum service to our beloved customers. Also, your feedback is invaluable to the development of our business.</p>
           <hr class="my-4">
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
