--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ image: assets/images/blog/press-cover.jpg
         <div class="col-md-10 mx-auto col-lg-5">
           <div class="p-4 p-md-5 border rounded-3 bg-light">
 
-            <a href="" target="_blank">
+            <a href="https://g.page/uslayer" target="_blank">
               <button class="w-100 btn btn-lg btn-success review_btn" type="submit">
                 <i class="bi bi-google"></i>Review us on Google
               </button>
             </a>
 
-            <a href="" target="_blank">
+            <a href="https://www.facebook.com/uslayer/reviews/" target="_blank">
               <button class="w-100 btn btn-lg btn-primary review_btn" type="submit">
                 <i class="bi bi-facebook"></i>Recomend us on Facebook
               </button>
