--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ image: assets/images/blog/press-cover.jpg
   <div style="font-size: 4.5rem;"><i class="bi bi-shop text-success"></i></div>
     <h2 class="display-4 fw-bold" style="font-size: 2.5rem;">Get your business online today</h2>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <p class="lead mb-4">Today, a website is essential for the success of any business. So we also do web hosting and selling domain names at reasonable prices to set up websites. Please visit our web hosting site for more information on this and more.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
       </div>
