--- a/index.html
+++ b/index.html
@@ -94,16 +94,15 @@ image: assets/images/blog/press-cover.jpg
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Today, a website is essential for the success of any business. So we also do <strong>Web Hosting</strong> and selling <strong>Domain names</strong> at reasonable prices to set up websites. Please visit our web hosting site for more information on this and more.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-
-        <p class="text-muted mb-0">
-          <a href="https://uslayer.supersite2.myorderbox.com/google-apps" target="_blank" class="link-secondary">Google Workspace</a>
-          <span class="px-1">·</span>
-          <a href="https://uslayer.supersite2.myorderbox.com/web-hosting/datacenter-network" target="_blank" class="link-secondary">Datacenter Details</a>
-          <span class="px-1">·</span>
-          <a href="https://uslayer.supersite2.myorderbox.com/web-hosting/data-protection-recovery" target="_blank" class="link-secondary">Backup and Recovery</a>
-        </p>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Visit </button>
       </div>
+      <p class="text-muted mb-0">
+        <a href="https://uslayer.supersite2.myorderbox.com/google-apps" target="_blank" class="link-secondary">Google Workspace</a>
+        <span class="px-1">·</span>
+        <a href="https://uslayer.supersite2.myorderbox.com/web-hosting/datacenter-network" target="_blank" class="link-secondary">Datacenter Details</a>
+        <span class="px-1">·</span>
+        <a href="https://uslayer.supersite2.myorderbox.com/web-hosting/data-protection-recovery" target="_blank" class="link-secondary">Backup and Recovery</a>
+      </p>
     </div>
     <div class="overflow-hidden" style="max-height: 30vh;">
       <div class="container px-5">
