--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ image: assets/images/blog/press-cover.jpg
     <h2 class="display-4 fw-bold" style="font-size: 2.5rem;">Get your business online today</h2>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Today, a website is essential for the success of any business. So we also do <strong>Web Hosting</strong> and selling <strong>Domain names</strong> at reasonable prices to set up websites. Please visit our web hosting site for more information on this and more.</p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+      <div class="justify-content-sm-center d-flex flex-column flex-md-row">
         <button type="button" class="btn btn-outline-secondary btn-lg px-4">Get started</button>
       </div>
       <p class="text-muted mb-0">
