--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ image: assets/images/blog/press-cover.jpg
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Today, a website is essential for the success of any business. So we also do <strong>Web Hosting</strong> and selling <strong>Domain names</strong> at reasonable prices to set up websites. Please visit our web hosting site for more information on this and more.</p>
       <div class="justify-content-sm-center d-flex flex-column flex-md-row">
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Get started</button>
+        <a href="#" class="btn btn-lg btn-outline-secondary mb-3" onclick="ga('send', 'event');">Get started</a>
       </div>
       <p class="text-muted mb-0">
         <a href="https://uslayer.supersite2.myorderbox.com/google-apps" target="_blank" class="link-secondary">Google Workspace</a>
