--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@ permalink: "/contact/"
 comments: false
 ---
 
-<form action="https://formspree.io/{{site.formspree}}" method="POST">    
+<form action="https://formspree.io/{{site.formspree}}" method="POST">
 <p class="mb-4">Thank you for your interest in getting in touch with us. Please send your message here. We will reply as soon as possible!</p>
 <div class="form-group row">
 <div class="col-md-6">
@@ -18,3 +18,38 @@ comments: false
 <textarea rows="8" class="form-control mb-3" name="message" placeholder="Message*" required></textarea>
 <input class="btn btn-dark" type="submit" value="Send">
 </form>
+
+
+
+<!-- Wrapper container -->
+<div class="container py-4">
+
+  <!-- Bootstrap 5 starter form -->
+  <form id="contactForm">
+
+    <!-- Name input -->
+    <div class="mb-3">
+      <label class="form-label" for="name">Name</label>
+      <input class="form-control" id="name" type="text" placeholder="Name" />
+    </div>
+
+    <!-- Email address input -->
+    <div class="mb-3">
+      <label class="form-label" for="emailAddress">Email Address</label>
+      <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" />
+    </div>
+
+    <!-- Message input -->
+    <div class="mb-3">
+      <label class="form-label" for="message">Message</label>
+      <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"></textarea>
+    </div>
+
+    <!-- Form submit button -->
+    <div class="d-grid">
+      <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+    </div>
+
+  </form>
+
+</div>
