--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,7 +30,7 @@ comments: false
     <!-- Name input -->
     <div class="mb-3">
       <label class="form-label" for="name">Name</label>
-      <input class="form-control" id="name" type="text" placeholder="Name" />
+      <input class="form-control" name="name"  id="name" type="text" placeholder="Name" required>
     </div>
 
     <!-- Email address input -->
