--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,7 @@ comments: false
 <div class="container py-4">
 
   <!-- Bootstrap 5 starter form -->
-  <form id="contactForm">
+  <form id="contactForm" action="https://formspree.io/{{site.formspree}}" method="POST">
 
     <!-- Name input -->
     <div class="mb-3">
@@ -36,18 +36,18 @@ comments: false
     <!-- Email address input -->
     <div class="mb-3">
       <label class="form-label" for="emailAddress">Email Address</label>
-      <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" />
+      <input class="form-control" id="emailAddress" type="email" name="_replyto" placeholder="Email Address" required>
     </div>
 
     <!-- Message input -->
     <div class="mb-3">
       <label class="form-label" for="message">Message</label>
-      <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"></textarea>
+      <textarea class="form-control" id="message" type="text" name="message" placeholder="Message" style="height: 10rem;" required></textarea>
     </div>
 
     <!-- Form submit button -->
     <div class="d-grid">
-      <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+      <button class="btn btn-primary btn-lg" type="submit" value="Send">Submit</button>
     </div>
 
   </form>
