--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,7 +47,7 @@ comments: false
 
     <!-- Form submit button -->
     <div class="d-grid">
-      <button class="btn btn-primary btn-lg" type="submit" value="Send">Submit</button>
+      <button class="btn btn-outline-secondary btn-lg" type="submit" value="Send">Submit</button>
     </div>
 
   </form>
