--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@ image: assets/images/blog/press-cover.jpg
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Today, a website is essential for the success of any business. So we also do <strong>Web Hosting</strong> and selling <strong>Domain names</strong> at reasonable prices to set up websites. Please visit our web hosting site for more information on this and more.</p>
       <div class="justify-content-sm-center d-flex flex-column flex-md-row">
-        <a href="https://uslayer.supersite2.myorderbox.com/" target="_blank" class="btn btn-lg btn-outline-secondary mb-3" onclick="ga('send', 'event');">Get started</a>
+        <a href="https://hosting.uslayer.com/" target="_blank" class="btn btn-lg btn-outline-secondary mb-3" onclick="ga('send', 'event');">Get started</a>
       </div>
       <p class="text-muted mb-3">
-        <a href="https://uslayer.supersite2.myorderbox.com/google-apps" target="_blank" class="link-secondary">Google Workspace</a>
+        <a href="https://hosting.uslayer.com/google-apps" target="_blank" class="link-secondary">Google Workspace</a>
         <span class="px-1">·</span>
-        <a href="https://uslayer.supersite2.myorderbox.com/web-hosting/datacenter-network" target="_blank" class="link-secondary">Datacenter Details</a>
+        <a href="https://hosting.uslayer.com/web-hosting/datacenter-network" target="_blank" class="link-secondary">Datacenter Details</a>
         <span class="px-1">·</span>
-        <a href="https://uslayer.supersite2.myorderbox.com/web-hosting/data-protection-recovery" target="_blank" class="link-secondary">Backup and Recovery</a>
+        <a href="https://hosting.uslayer.com/web-hosting/data-protection-recovery" target="_blank" class="link-secondary">Backup and Recovery</a>
       </p>
     </div>
     <div class="overflow-hidden" style="max-height: 30vh;">
