--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: CCTV and Software Development
+title: CCTV Installation and Software Development
 layout: default
 background: '/img/bg-index.jpg'
 image: assets/images/blog/press-cover.jpg
