--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ image: assets/images/blog/press-cover.jpg
       <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
         <h1 class="mb-3">Automation, Efficiency & Security Begin With Us</h1>
         <p class="lead mb-4">
-          Technical support is essential for any individual or organization to carry out day-to-day work easily and quickly. So our duty as US LAYER is to support the people of Sri Lanka with new technologies. Our sole objective is to provide the most accurate technical service to our customers.
+          Technical support is essential for any individual or organization to carry out day-to-day work easily and quickly. 
+          So our duty as US LAYER is to support the people of Sri Lanka with new technologies. 
+          Our sole objective is to provide the most accurate technical service to our customers.
         </p>
 
         <div class="d-flex flex-column flex-md-row">
@@ -41,7 +43,9 @@ image: assets/images/blog/press-cover.jpg
             CCTV and Alarm Systems
           </div>
         <h2 class="display-4 fw-bold lh-1" style="font-size: 2.5rem;">Home & Business Security</h2>
-        <p class="lead">We have years of experience in the field and have a dedicated team. After we have thoroughly checked the location where we want to install the CCTV or security alarm system, we will install the system with the appropriate devices in place.</p>
+        <p class="lead">We have years of experience in the field and have a dedicated team. 
+          After we have thoroughly checked the location where we want to install the CCTV or security alarm system, 
+          we will install the system with the appropriate devices in place.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
           <a href="#" class="btn btn-lg btn-outline-secondary mb-3">Find out more...</a>
         </div>
@@ -56,7 +60,9 @@ image: assets/images/blog/press-cover.jpg
       <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
           <h2 class="display-4 fw-bold lh-1 mb-3">Did you see our uniqueness than others?</h2>
-          <p class="col-lg-10 fs-4">With our focus on the world’s ever-renewing technology, we are quick to provide maximum service to our beloved customers. Also, your feedback is invaluable to the development of our business.</p>
+          <p class="col-lg-10 fs-4">With our focus on the world’s ever-renewing technology, 
+            we are quick to provide maximum service to our beloved customers. 
+            Also, your feedback is invaluable to the development of our business.</p>
           <hr class="my-4">
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
