--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ image: assets/images/blog/press-cover.jpg
               </button>
             </a>
 
-            <a href="/customer-comments/" target="_blank">
+            <a href="/customer-comments/">
               <button class="w-100 btn btn-lg btn-warning review_btn" type="submit">
                 <i class="bi bi-chat-left-quote"></i>Leave a comment
               </button>
