--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ image: assets/images/blog/press-cover.jpg
       <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
           <h2 class="display-4 fw-bold lh-1 mb-3">Did you see our uniqueness than others?</h2>
-          <p class="col-lg-10 fs-4">With our focus on the world’s ever-renewing technology, 
-            we are quick to provide maximum service to our beloved customers. 
-            Also, your feedback is invaluable to the development of our business.</p>
+          <p class="col-lg-10 fs-4">We prioritize staying at the forefront of the rapidly evolving world of technology 
+            to ensure that we deliver the highest quality services to our valued customers. 
+            Your satisfaction is our top priority, and we deeply value your feedback as we strive to continuously improve our business. </p>
           <hr class="my-4">
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
