--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ image: assets/images/blog/press-cover.jpg
         </p>
 
         <div class="d-flex flex-column flex-md-row">
-          <a href="#" class="btn btn-lg btn-bd-primary mb-3 me-md-3">Our services</a>
+          <a href="/services" class="btn btn-lg btn-bd-primary mb-3 me-md-3">Our services</a>
           <a href="/about" class="btn btn-lg btn-outline-secondary mb-3">About us</a>
         </div>
 
