--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@ image: assets/images/blog/press-cover.jpg
         <div class="col-md-10 mx-auto col-lg-5">
           <div class="p-4 p-md-5 border rounded-3 bg-light">
 
+            <!-- TrustBox widget - Review Collector -->
+            <div class="review_btn trustpilot-widget" data-locale="en-US" data-template-id="56278e9abfbbba0bdcd568bc"
+              data-businessunit-id="61a90c7b8ad0328c2531cbd2" data-style-height="52px" data-style-width="100%">
+              <a href="https://www.trustpilot.com/review/uslayer.com" target="_blank" rel="noopener">Trustpilot</a>
+            </div>
+            <!-- End TrustBox widget -->
+
             <a href="https://g.page/uslayer/review" target="_blank">
               <button class="w-100 btn btn-lg btn-success review_btn" type="submit">
                 <i class="bi bi-google"></i>Review us on Google
@@ -78,7 +85,7 @@ image: assets/images/blog/press-cover.jpg
               <button class="w-100 btn btn-lg btn-primary review_btn" type="submit">
                 <i class="bi bi-facebook"></i>Recomend us on Facebook
               </button>
-            </a>
+            </a>            
 
             <a href="/customer-comments/">
               <button class="w-100 btn btn-lg btn-warning review_btn" type="submit">
@@ -92,7 +99,9 @@ image: assets/images/blog/press-cover.jpg
       </div>
     </div>
 
-
+<!-- TrustBox script -->
+<script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+<!-- End TrustBox script -->
 
 <div class="px-4 pt-5 my-5b text-center border-bottom">
   <div style="font-size: 4.5rem;"><i class="bi bi-shop text-success"></i></div>
