--- a/index.html
+++ b/index.html
@@ -7,34 +7,6 @@ image: assets/images/blog/press-cover.jpg
 
 <!-- Home Intro
 ================================================== -->
-{% if page.url == "/" %}
-<div class="bd-masthead mb-3" id="content">
-  <div class="container px-4 px-md-3">
-    <div class="row align-items-lg-center">
-      <div class="col-8 mx-auto col-md-4 order-md-2 col-lg-5">
-        <img src="/assets/images/header.svg" alt="Sri Lankan IT Company">
-      </div>
-      <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
-        <h1 class="mb-3">Automation, Efficiency & Security Begin With Us</h1>
-        <p class="lead mb-4">
-          Technical support is essential for any individual or organization to carry out day-to-day work easily and quickly. 
-          So our duty as US LAYER is to support the people of Sri Lanka with new technologies. 
-          Our sole objective is to provide the most accurate technical service to our customers.
-        </p>
-
-        <div class="d-flex flex-column flex-md-row">
-          <a href="/services" class="btn btn-lg btn-bd-primary mb-3 me-md-3">Our services</a>
-          <a href="/about" class="btn btn-lg btn-outline-secondary mb-3">About us</a>
-        </div>
-
-      </div>
-    </div>
-
-
-  </div>
-</div>
-
-{% endif %}
 
 <div class="container">
   <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
@@ -66,29 +38,29 @@ image: assets/images/blog/press-cover.jpg
           <hr class="my-4">
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
-          <div class="p-4 p-md-5 border rounded-3 bg-light">
+          <div class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
 
-            <!-- TrustBox widget - Review Collector -->
-            <div class="review_btn trustpilot-widget" data-locale="en-US" data-template-id="56278e9abfbbba0bdcd568bc"
-              data-businessunit-id="61a90c7b8ad0328c2531cbd2" data-style-height="52px" data-style-width="100%">
-              <a href="https://www.trustpilot.com/review/uslayer.com" target="_blank" rel="noopener">Trustpilot</a>
-            </div>
-            <!-- End TrustBox widget -->
+            <a href="https://www.trustpilot.com/evaluate/uslayer.com?utm_medium=trustbox&utm_source=TrustBoxReviewCollector" target="_blank">
+              <button class="w-100 btn btn-lg  review_btn" style="background-color: #42B67A; color: white;">
+                <i class="bi bi-star-fill"></i>Review us on Trustpilot
+              </button>
+              
+            </a>
 
             <a href="https://g.page/uslayer/review" target="_blank">
-              <button class="w-100 btn btn-lg btn-success review_btn" type="submit">
+              <button class="w-100 btn btn-lg btn-success review_btn" >
                 <i class="bi bi-google"></i>Review us on Google
               </button>
             </a>
 
             <a href="https://www.facebook.com/uslayer/reviews/" target="_blank">
-              <button class="w-100 btn btn-lg btn-primary review_btn" type="submit">
+              <button class="w-100 btn btn-lg btn-primary review_btn">
                 <i class="bi bi-facebook"></i>Recomend us on Facebook
               </button>
             </a>            
 
             <a href="/customer-comments/">
-              <button class="w-100 btn btn-lg btn-warning review_btn" type="submit">
+              <button class="w-100 btn btn-lg btn-warning review_btn">
                 <i class="bi bi-chat-left-quote"></i>Leave a comment
               </button>
             </a>
@@ -99,9 +71,7 @@ image: assets/images/blog/press-cover.jpg
       </div>
     </div>
 
-<!-- TrustBox script -->
-<script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
-<!-- End TrustBox script -->
+
 
 <div class="px-4 pt-5 my-5b text-center border-bottom">
   <div style="font-size: 4.5rem;"><i class="bi bi-shop text-success"></i></div>
