--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ image: assets/images/blog/press-cover.jpg
           After we have thoroughly checked the location where we want to install the CCTV or security alarm system, 
           we will install the system with the appropriate devices in place.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-          <a href="#" class="btn btn-lg btn-outline-secondary mb-3">Find out more...</a>
+          <a href="https://hybridcctv.uslayer.com" class="btn btn-lg btn-outline-secondary mb-3" target="_blank">Find out more...</a>
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
